2008-04-11  Bruno Haible  <bruno@clisp.org>

	Limit the exported symbols through a config.h trick.
	* m4/exported.m4: New file, from GNU gettext.
	* lib/exported.sh.in: New file, from GNU gettext.
	* configure.ac: Invoke gt_GLOBAL_SYMBOL_PIPE.
	(AC_CONFIG_FILES): Add lib/exported.sh.
	* lib/declared.sh: New file, borrowing from GNU gettext's moopp.
	* lib/Makefile.am (HEADERS_WITH_EXTERNS): New variable.
	(libunistring.sym, config.h): New rules.
	(MOSTLYCLEANFILES, MAINTAINERCLEANFILES): Update accordingly.
	(EXTRA_DIST): Add libunistring.sym.
	* tests/Makefile.am (DEFAULT_INCLUDES): New variable.
	* HACKING: Require GNU sed.

2008-04-10  Bruno Haible  <bruno@clisp.org>

	Install all auxiliary include files in a subdirectory.
	* lib/unistring/inline.h: Renamed from lib/unistring-inline.h.
	* configure.ac: Invoke AC_PROG_MKDIR_P.
	* lib/Makefile.am (nobase_include_HEADERS): Renamed from
	include_HEADERS. Change unistring-inline.h to unistring/inline.h.
	(nobase_nodist_include_HEADERS): Renamed from nodist_include_HEADERS.
	Change unistring-*.h to unistring/*.h.
	(unistring/stdbool.h): Renamed from unistring-stdbool.h. Ensure target
	directory exists.
	(unistring/stdint.h): Renamed from unistring-stdint.h. Ensure target
	directory exists.
	(unistring/localcharset.h): Renamed from unistring-localcharset.h.
	Ensure target directory exists.
	(unistring/iconveh.h): Renamed from unistring-iconveh.h Ensure target
	directory exists.
	(BUILT_SOURCES, MOSTLYCLEANFILES, CLEANFILES): Update.
	(CLEANDIRS, CLEANDIRS_NOT_IN_SRCDIR): New variables.
	(clean-local): New rule.
	* gnulib-local/lib/unicase.h.diff: Update include statements.
	* gnulib-local/lib/uniconv.h.diff: Likewise.
	* gnulib-local/lib/unictype.h.diff: Likewise.
	* gnulib-local/lib/unilbrk.h.diff: Likewise.
	* gnulib-local/lib/unistr.h.diff: Likewise.
	* gnulib-local/lib/unitypes.h.diff: Likewise.
	* gnulib-local/lib/uniwidth.h.diff: Likewise.
	* lib/unistring-notinline.h: Likewise.
